# nanochat

./: .gitignore  CLAUDE.md  launch_6x_amd_xtx.sh  launch_6x_amd_xtx_fsdp.sh  mlaunch.sh  mlaunch_copy.sh  pyproject.toml  qlaunch.sh
nanochat/: fsdp_utils.py
scripts/: base_loss.py  base_train.py  chat_eval.py  chat_sft.py  mid_train.py
